fix alignment issue between content and sidebar if the top item is a paragraph

--- a/web/themes/custom/tailwind_nzp/src/css/partials/container.css
+++ b/web/themes/custom/tailwind_nzp/src/css/partials/container.css
@@ -3,7 +3,9 @@
 
 .container {
   @apply mb-4 px-4;
-
+}
+.container > div > div p:first-child {
+  @apply mt-0;
 }
 
 .container-fluid {
